# Tagueri-sales-analyzer

./: .gitignore  README.md  pyproject.toml
samples/: sales.csv
src/sales_analyzer/: __main__.py  parser.py  revenueCalculator.py
test/: sales_test.csv  tests.py
